<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pantalla2"
        android:layout_width="40dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:text="@string/pantalla2"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toStartOf="@+id/Resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Resultado"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:text="@string/Resultado"
        android:textAlignment="textEnd"
        android:textSize="55sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pantalla2"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Resultado">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="M"
                android:text="@string/button17"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="MR"
                android:text="@string/button18"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="MC"
                android:text="@string/button19"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button20"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="ce"
                android:text="@string/button20"
                android:textColor="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button2"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button3"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="dividir"
                android:text="@string/button4"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button5"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button6"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button7"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="multiplicar"
                android:text="@string/button8"
                android:textColor="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button9"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button10"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button11"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="restar"
                android:text="@string/button12"
                android:textColor="@android:color/background_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@drawable/botones2"
                android:onClick="leeNumero"
                android:text="@string/button13"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="calcular"
                android:text="@string/button14"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/botones"
                android:onClick="sumar"
                android:text="@string/button15"
                android:textColor="@android:color/background_light" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>